# gitui

./: .ci-hub.yml  .gitignore  AGENTS.md  CHANGELOG.md  INSTALL.md  README.md  coverage.json  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  hub-ci.yml
app/: __init__.py  main.py
app/core/: controller.py  errors.py  models.py  repo_state.py
app/exec/: __init__.py  command_models.py  command_queue.py  command_runner.py  fake_command_runner.py
app/git/: git_runner.py  git_service.py  parse_branches.py  parse_conflicts.py  parse_diff.py  parse_log.py  parse_remote_branches.py  parse_remotes.py  parse_stash.py  parse_status.py  parse_tags.py
app/ui/: __init__.py  branches_panel.py  commit_panel.py  console_widget.py  diff_viewer.py  git_toolbar.py  log_panel.py  main_window.py  remotes_panel.py  repo_picker.py  stash_panel.py  status_panel.py  tags_panel.py  theme.py  theme_engine.py  theme_preview.py
app/utils/: logging.py  paths.py  qt_compat.py  settings.py
docs/: README.md  agents.md  roadmap.md  structure.md
docs/adr/: ADR-0001-command-runner.md  ADR-0002-git-cli-backend.md  ADR-0003-machine-parsing.md  ADR-0004-ui-intent-boundary.md  ADR-0005-scope-and-concurrency.md  ADR-0006-error-handling.md  ADR-0007-controller-routing.md  ADR-0008-testing-strategy.md  ADR-0009-visualization-library.md  README.md
docs/notes/: README.md  adr_scope.md  command_models.md  core_command_audit.md  coverage_check.md  fake_command_runner.md  (+29 more)
scripts/: check_coverage.py  gitui  install_mac.sh  install_windows.cmd  install_windows.ps1  manual_smoke.py  run-mutation.sh  run_gitui.py
tests/: conftest.py  test_command_queue.py  test_command_runner.py  test_controller.py  test_dialogs.py  test_errors.py  test_git_runner.py  test_git_service.py  test_main.py  test_main_window.py  test_parse_branches.py  test_parse_conflicts.py  test_parse_diff.py  test_parse_log.py  test_parse_remote_branches.py  test_parse_remotes.py  test_parse_stash.py  test_parse_status.py  test_parse_tags.py  test_parsers_property.py  test_qt_compat.py  test_repo_state.py  test_scripts.py  test_theme_controls.py  test_theme_editor_dialog.py  test_theme_engine.py  test_theme_preview.py  test_ui_panels.py  test_ui_placeholders.py
(+95 files in other folders)
