[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitui"
version = "0.1.0"
description = "PySide6 Git UI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["PySide6>=6.6"]

[project.optional-dependencies]
dev = [
  "mypy>=1.8",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-xdist>=3.5",
  "hypothesis>=6.100",
  "mutmut>=2.4",
  "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_default_fixture_loop_scope = "function"
markers = ["qprocess: QProcess integration tests"]

[tool.coverage.run]
source = ["app", "scripts"]

[tool.coverage.report]
fail_under = 90
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.mutmut]
paths_to_mutate = [
  "app/git/parse_status.py",
  "app/git/parse_log.py",
  "app/git/parse_branches.py",
  "app/git/parse_diff.py",
  "app/git/parse_stash.py",
  "app/git/parse_tags.py",
  "app/git/parse_remotes.py",
  "app/git/parse_conflicts.py",
]
also_copy = ["app", "scripts"]
tests_dir = ["tests"]
pytest_add_cli_args = ["-x", "-q", "-m", "not qprocess"]
